# api-gateway/api/handlers/reporthandlers/get_sell_report.go
@@ -1,0 +1,54 @@
+package reporthandlers
+
+import (
+	"api-gateway/cluster/report"
+	"github.com/GOAT-prod/goatcontext"
+	"github.com/GOAT-prod/goathttp/json"
+	goathttp "github.com/GOAT-prod/goathttp/server"
+	"github.com/GOAT-prod/goatlogger"
+	"github.com/gorilla/mux"
+	"net/http"
+	"strconv"
+)
+
+// GetSellReportHandlers godoc
+// @Summary Get sell report
+// @Description Retrieves the sell report for a specific user by their ID.
+// @Tags Reports
+// @Produce json
+// @Param userId path int true "User ID"
+// @Success 200 {object} object "Sell report data"
+// @Failure 400 {string} string "Invalid request or failed to process the response"
+// @Failure 403 {string} string "Forbidden - context creation failed"
+// @Router /reports/sell/{userId} [get]
+// @Security LogisticAuth
+func GetSellReportHandlers(logger goatlogger.Logger, reportClient *report.Client) goathttp.Handler {
+	return func(w http.ResponseWriter, r *http.Request) {
+		ctx, err := goatcontext.New(r)
+		if err != nil {
+			w.WriteHeader(http.StatusForbidden)
+			logger.Error(err.Error())
+			return
+		}
+
+		userId, err := strconv.Atoi(mux.Vars(r)["userId"])
+		if err != nil {
+			w.WriteHeader(http.StatusBadRequest)
+			logger.Error(err.Error())
+			return
+		}
+
+		sellReport, err := reportClient.GetSellReport(ctx, userId)
+		if err != nil {
+			w.WriteHeader(http.StatusBadRequest)
+			logger.Error(err.Error())
+			return
+		}
+
+		if err = json.WriteResponse(w, http.StatusOK, sellReport); err != nil {
+			w.WriteHeader(http.StatusBadRequest)
+			logger.Error(err.Error())
+			return
+		}
+	}
+}
