# api-gateway/api/handlers/requesthandlers/get_requests.go
@@ -1,0 +1,44 @@
+package requesthandlers
+
+import (
+	"api-gateway/cluster/request"
+	"github.com/GOAT-prod/goatcontext"
+	"github.com/GOAT-prod/goathttp/json"
+	goathttp "github.com/GOAT-prod/goathttp/server"
+	"github.com/GOAT-prod/goatlogger"
+	"net/http"
+)
+
+// GetRequestsHandler godoc
+// @Summary Get requests
+// @Description Retrieves a list of requests.
+// @Tags Requests
+// @Produce json
+// @Success 200 {object} []object "List of requests"
+// @Failure 400 {string} string "Invalid request or failed to process the response"
+// @Failure 403 {string} string "Forbidden - context creation failed"
+// @Router /requests [get]
+// @Security LogisticAuth
+func GetRequestsHandler(logger goatlogger.Logger, requestClient *request.Client) goathttp.Handler {
+	return func(w http.ResponseWriter, r *http.Request) {
+		ctx, err := goatcontext.New(r)
+		if err != nil {
+			w.WriteHeader(http.StatusForbidden)
+			logger.Error(err.Error())
+			return
+		}
+
+		requests, err := requestClient.GetRequests(ctx)
+		if err != nil {
+			w.WriteHeader(http.StatusBadRequest)
+			logger.Error(err.Error())
+			return
+		}
+
+		if err = json.WriteResponse(w, http.StatusOK, requests); err != nil {
+			w.WriteHeader(http.StatusBadRequest)
+			logger.Error(err.Error())
+			return
+		}
+	}
+}
